Fix / improve various stuff with legends and layers settings - Recompute position of proportional symbols when "avoid overlapping" option is checked/unchecked and when "iteration" value changes - Reduce size of the modals for legends, layers and layout features - Reduce size of table for font properties in legend modal - Harmonise the type of component used for collapsible sections

--- a/src/styles/LayerAndLegendSettings.css
+++ b/src/styles/LayerAndLegendSettings.css
@@ -73,3 +73,13 @@ We have two types of "field":
     width: 5em !important;
     height: 2em;
 }
+
+.table-font-properties {
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.table-font-properties input[type=number],
+.table-font-properties select {
+    font-size: 0.9rem;
+}
